Added checks and the unique api, at least tried to

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ protected/log.txt
 protected/store.txt
 #file that contains registration info for the google doc api
 configFile.php
+
+#all files that contain passwords
+*.pss.php
